@@ -1,6 +1,8 @@
 2006-06-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* ld.c (parse_z_option): Recognize execstack and noexecstack.
+	Handle record and ignore as position dependent options.
+	(parse_z_option_2): Handle ignore and record here.
 	* ld.h (struct ld_state): Add execstack field.
 	* ldgeneric.c (add_relocatable_file): Recognize .note.GNU-stack
 	sections.
